Removed java 1.9 code.